updated gitignore to reflect new directories

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@
 __temp__*
 
 # Data
-#capacitiveSensor/data/*
+#testing/data/*
 
 # VS Code
 .vscode/*
 
 # Binaries
-capacitiveSensor/bin/*
+firmware/bin/*
